--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "tjs",
-  "version": "0.1.0",
-  "description": "",
-  "main": "gulpfile.js",
-  "directories": {
-    "test": "test"
+  "version": "0.1.1",
+  "description": "TJS === Data binding Javascript Project",
+  "main": "webpack.config.js",
+  "dependencies": {},
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "build": "webpack"
   },
   "devDependencies": {
-    "gulp-rename": "^1.2.2",
-    "gulp": "^3.9.1",
-    "gulp-uglify": "^2.1.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babili-webpack-plugin": "0.0.11",
+    "uglifyjs-webpack-plugin": "^0.4.3",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Poulpinounette/tjs.git"
   },
   "author": "Poulpinounette",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Poulpinounette/tjs/issues"
   },
-  "homepage": "https://github.com/Poulpinounette/tjs#readme",
-  "dependencies": {
-    "gulp-connect": "^5.0.0",
-    "gulp-watch": "^4.3.11"
-  }
+  "homepage": "https://github.com/Poulpinounette/tjs#readme"
 }
