--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poulpe",
-  "version": "0.1.23",
+  "version": "0.1.231",
   "description": "poulpe || Data binding Javascript Project",
   "main": "./src/index.js",
   "bin": {
@@ -15,6 +15,7 @@
     "dist/",
     "test/",
     "README.md",
+    "CHANGELOG.md",
     "gulpfile.js",
     "package.json"
   ],
@@ -26,6 +27,7 @@
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
     "gulp-server-livereload": "^1.9.2",
+    "jsdom": "^11.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
