--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "poulpe",
-  "version": "0.1.31",
+  "version": "0.2.0",
   "description": "poulpe || Data binding Javascript Project",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "bin": {
-    "poulpe": "./src/index.js"
+    "poulpe": "./dist/index.js"
   },
   "keywords": [
     "poulpe",
@@ -16,23 +16,13 @@
     "test/",
     "README.md",
     "CHANGELOG.md",
-    "gulpfile.js",
     "package.json"
   ],
+  "type": "typings/index.d.ts",
   "scripts": {
-    "dev": "gulp",
-    "build": "gulp js",
-    "clean" : "rm -r node_modules/"
-  },
-  "devDependencies": {
-    "browserify": "^13.1.0",
-    "gulp": "^3.9.1",
-    "gulp-server-livereload": "^1.9.2",
-    "jsdom": "^11.1.0",
-    "mocha": "^5.0.4",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "clean": "rm dist/bundle.js",
+    "start": "parcel test/test.html",
+    "build-prod": "parcel build src/index.ts && tsc -d --emitDeclarationOnly"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -49,5 +39,12 @@
   "homepage": "https://github.com/Poulpinounette/poulpe#readme",
   "directories": {
     "test": "test"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "@types/node": "^12.7.5"
   }
 }
